--- a/page/views/partials/sections/editing/roster.ejs
+++ b/page/views/partials/sections/editing/roster.ejs
@@ -1,54 +1,84 @@
 <div class="roster-section download-section">
-    <div class="container">
-        <div class="col-lg-12 background-shadow">
-            <h2>Roster</h2>
-            <table class="table table-inverse">
-            <thead>
-              <tr>
-                <th>Rank</th>
-                <th>Name</th>
-                <th>Position</th>
-                <th>Squad (A/B)</th>
-                <th>Role</th>
-                <th>Enlisted</th>
-                <th></th>
-                <th></th>
-              </tr>
-            </thead>
-            <tbody>
-                <% members.forEach(member => { %>
-              <tr>
-                <form method="post" action="/member" class="form-group">
-                <input hidden name="id" type="number" value="<%= member.id %>">
-                <th scope="row"><input type="text" class="form-control" required name="rank" value="<%= member.rank %>"/></th>
-                <td><input type="text" class="form-control" name="name" required value="<%= member.name %>"/></td>
-                <td><input type="text" class="form-control" name="pos" required value="<%= member.pos %>"/></td>
-                <td><input type="text" class="form-control" name="squad" required value="<%= member.squad %>"/></td>
-                <td><input type="text" class="form-control" name="role" required value="<%= member.role %>"/></td>
-                <td><input type="text" class="form-control" name="joined" required value="<%= member.joined %>"/></td>
-                <td><button class="btn btn-default btn-lg" type="submit">Save</button></td>
+  <div class="container">
+    <div class="col-lg-12 background-shadow">
+      <h2>Roster</h2>
+      <table class="table table-inverse">
+        <thead>
+          <tr>
+            <th>Rank</th>
+            <th>Name</th>
+            <th>Position</th>
+            <th>Squad (A/B)</th>
+            <th>Role</th>
+            <th>Enlisted</th>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% members.forEach(member => { %>
+            <tr>
+              <form method="post" action="/member" class="form-group">
+                <th scope="row">
+                  <input hidden name="admin" value="<%= member.admin %>">
+                  <input type="text" class="form-control" required name="rank" value="<%= member.rank %>" />
+                </th>
+                <td>
+                  <input type="text" class="form-control" name="name" required value="<%= member.name %>" />
+                </td>
+                <td>
+                  <input type="text" class="form-control" name="pos" required value="<%= member.pos %>" />
+                </td>
+                <td>
+                  <input type="text" class="form-control" name="squad" required value="<%= member.squad %>" />
+                </td>
+                <td>
+                  <input type="text" class="form-control" name="role" required value="<%= member.role %>" />
+                </td>
+                <td>
+                  <input type="text" class="form-control" name="joined" required value="<%= member.joined %>" />
+                </td>
+                <td>
+                  <button class="btn btn-default btn-lg" type="submit">Save</button>
+                </td>
               </form>
               <form method="post" action="/delete/member">
-                <input hidden name="id" type="number" value="<%= member.id %>">
-                <td><button class="btn btn-red btn-lg" type="submit">Delete</button></td>
-            </form>
-              </tr>
-              <% }) %>
+                <input hidden name="id" type="number" value="<%= member %>">
+                <td>
+                  <button class="btn btn-red btn-lg" type="submit">Delete</button>
+                </td>
+              </form>
+            </tr>
+            <% }) %>
               <tr>
                 <form method="post" class="form-group" action="/member">
-                <input hidden name="id" value="-1">
-                <th scope="row"><input type="text" class="form-control" required name="rank" placeholder="Rank"/></th>
-                <td><input type="text" class="form-control" name="name" required placeholder="Name"/></td>
-                <td><input type="text" class="form-control" name="pos" required placeholder="Position"/></td>
-                <td><input type="text" class="form-control" name="squad" required placeholder="squad(A/B)"/></td>
-                <td><input type="text" class="form-control" name="role" required placeholder="Role"/></td>
-                <td><input type="text" class="form-control" name="joined" required placeholder="Enlisted"/></td>
-                <td><button class="btn btn-default btn-lg" type="submit">Save New</button></td>
-              </form>
+                  <input hidden name="id" value="-1">
+                  <th scope="row">
+                    <input type="text" class="form-control" required name="rank" placeholder="Rank" />
+                  </th>
+                  <td>
+                    <input type="text" class="form-control" name="name" required placeholder="Name" />
+                  </td>
+                  <td>
+                    <input type="text" class="form-control" name="pos" required placeholder="Position" />
+                  </td>
+                  <td>
+                    <input type="text" class="form-control" name="squad" required placeholder="squad(A/B)" />
+                  </td>
+                  <td>
+                    <input type="text" class="form-control" name="role" required placeholder="Role" />
+                  </td>
+                  <td>
+                    <input type="text" class="form-control" name="joined" required placeholder="Enlisted" />
+                  </td>
+                  <td>
+                    <button class="btn btn-default btn-lg" type="submit">Save New</button>
+                  </td>
+                </form>
               </tr>
-            </tbody>
-          </table>
-          <hr />
-        </div>
+        </tbody>
+      </table>
+      <hr />
     </div>
+  </div>
 </div>
