--- a/page/views/partials/sections/members.ejs
+++ b/page/views/partials/sections/members.ejs
@@ -2,9 +2,9 @@
     <div class="container">
         <div class="col-lg-10 col-lg-offset-1 background-shadow">
             <h2>Members Login</h2>
-           <form>
-               <label for="name">User</label><br>
-               <input id="name" type="text" name="user"><br/>
+           <form method="POST" action="/login">
+               <label for="user">User</label><br>
+               <input id="user" type="text" name="user"><br/>
                <label for="name">Password</label><br>
                <input id="password "type="password" name="password"><br>
                <button class='btn btn-default btn-lg' type="submit">Login</button>
