--- a/page/views/partials/sections/members.ejs
+++ b/page/views/partials/sections/members.ejs
@@ -7,7 +7,8 @@
                <input id="user" type="text" name="user"><br/>
                <label for="name">Password</label><br>
                <input id="password "type="password" name="password"><br>
-               <button class='btn btn-default btn-lg' type="submit">Login</button>
+               <button class='btn btn-default btn-lg' type="submit">Login</button><br>
+               <a href="/forgot">I forgot my password</a>
            </form>
         </div>
     </div>
