Improve slightly and add search

--- a/page/views/index.ejs
+++ b/page/views/index.ejs
@@ -13,7 +13,7 @@
 
 
     <!-- Download Section -->
-    <section id="forum" class="content-section text-center">
+    <section id="members" class="content-section text-center">
         <%- include('partials/sections/members'); %>
     </section>
 
@@ -23,6 +23,10 @@
 
     <section id="join" class="container content-section text-center">
         <%- include('partials/sections/join'); %>
+    </section>
+
+    <section id="gear" class="container content-section text-center">
+        <%- include('partials/sections/gear'); %>
     </section>
     
     <%- include('partials/footer'); %>
