--- a/page/views/partials/nav.ejs
+++ b/page/views/partials/nav.ejs
@@ -18,7 +18,7 @@
                     <a href="#page-top"></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#members">Members</a>
+                    <a class="page-scroll" href="<% if(!home){ %>/<% } %>#members">Members</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="<% if(!home){ %>/<% } %>#about">About</a>
@@ -27,7 +27,7 @@
                     <a class="page-scroll" href="<% if(!home){ %>/<% } %>#join">Join</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="<% if(!home){ %>/<% } %>#servers">Servers</a>
+                    <a class="page-scroll" href="<% if(!home){ %>/<% } %>#gear">Gear Search</a>
                 </li>
             </ul>
         </div>
