--- a/page/views/partials/sections/members.ejs
+++ b/page/views/partials/sections/members.ejs
@@ -2,14 +2,18 @@
     <div class="container">
         <div class="col-lg-10 col-lg-offset-1 background-shadow">
             <h2>Members Login</h2>
-           <form method="POST" action="/login">
-               <label for="user">User</label><br>
-               <input id="user" type="text" name="user"><br/>
-               <label for="name">Password</label><br>
-               <input id="password "type="password" name="password"><br>
-               <button class='btn btn-default btn-lg' type="submit">Login</button><br>
-               <a href="/forgot">I forgot my password</a>
-           </form>
+            <form method="POST" action="/login" >
+                <div class="form-group">
+                  <label for="user">Username</label>
+                  <input type="text" class="form-control" id="user" name="user" aria-describedby="user" placeholder="Enter Username" style="text-align: center">
+                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                </div>
+                <div class="form-group">
+                  <label for="password">Password</label>
+                  <input type="password" class="form-control" id="password" name="password" placeholder="Password" style="text-align: center">
+                </div>
+                <button class='btn btn-default btn-lg' type="submit">Login</button>
+              </form>
         </div>
     </div>
 </div>
